# rpc-stats

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy-backend.yml
crates/api/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  errors.rs  lib.rs
crates/core/src/types/: api.rs  db_models.rs  mod.rs  responses.rs  rpc.rs
crates/db/: .env.example  Cargo.toml
crates/db/migrations/: 20260416151346_create_rpcs.sql  20260416151450_create_workers.sql  20260416151537_create_stats.sql  20260416152153_create_alerts.sql  20260419034201_reference_tables.down.sql  20260419034201_reference_tables.up.sql  20260419034202_transactions.down.sql  20260419034202_transactions.up.sql  20260419034203_metrics_hypertables.down.sql  20260419034203_metrics_hypertables.up.sql  20260419034204_leaderboard_incidents.down.sql  20260419034204_leaderboard_incidents.up.sql  20260419034205_benchmark_tables.down.sql  20260419034205_benchmark_tables.up.sql  20260419034206_triggers.down.sql  20260419034206_triggers.up.sql  20260419034207_retention_policies.down.sql  20260419034207_retention_policies.up.sql  20260419034208_alert_tables.down.sql  20260419034208_alert_tables.up.sql
crates/db/src/: lib.rs
crates/kafka/: Cargo.toml
crates/kafka/src/: lib.rs
crates/kafka/src/topics/: metrics_aggregated.rs  metrics_raw.rs  mod.rs  tx_confirmed.rs  tx_landed.rs  tx_submitted.rs  tx_timeout.rs
crates/redis/: Cargo.toml
crates/redis/src/: keys.rs  lib.rs  streams.rs
domains/alert-service/: Cargo.toml
domains/alert-service/src/: lib.rs  listener.rs  main.rs  models.rs  routes.rs  webhook.rs
domains/api/: .env.example  Cargo.toml  endpoints.md
domains/api/src/: app_state.rs  error.rs  lib.rs  main.rs
domains/api/src/cron/: incidents.rs  leaderboard.rs  mod.rs  rankings.rs
domains/api/src/routes/: benchmarks.rs  health.rs  incidents.rs  leaderboard.rs  mod.rs  rpcs.rs  system.rs  trends.rs  ws.rs
domains/api/tests/: test_leaderboard.rs  test_rpcs.rs  test_system.rs
domains/api/tests/common/: mod.rs
domains/geyser-consumer/: Cargo.toml  build.rs
domains/geyser-consumer/proto/: geyser.proto
domains/geyser-consumer/src/: main.rs
domains/incident-service/: Cargo.toml
domains/incident-service/src/: main.rs
domains/ingestion-service/: Cargo.toml
domains/ingestion-service/src/: main.rs
domains/ingestion-service/src/handlers/: mod.rs  tx_confirmed.rs  tx_landed.rs  tx_submitted.rs  tx_timeout.rs
domains/scheduler-service/: .env.example  Cargo.toml
domains/scheduler-service/src/: handlers.rs  main.rs  scheduler.rs
domains/stat-engine/: Cargo.toml
domains/stat-engine/src/: aggregator.rs  lib.rs  main.rs  metrics.rs  state.rs
domains/worker-service/: Cargo.toml
migrations/: 20260416123130_create_chains.sql  20260416152020_create_incident.sql
nginx/: rpc-stats.conf
