[workspace]
members = ["crates/*", "domains/*"]
resolver = "2"

[workspace.dependencies]

tokio = { version = "1", features = ["full"] }

axum = { version = "0.7", features = ["macros"] }
actix-web = "4"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "timeout", "cors"] }

sqlx = { version = "0.7", features = [
    "postgres",
    "uuid",
    "time",
    "chrono",
    "runtime-tokio",
] }

deadpool-redis = "0.14"
redis = { version = "0.24", features = ["tokio-comp", "streams"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }

thiserror = "1"
anyhow = "1"

rpc-core = { path = "crates/core" }

figment = { version = "0.10", features = ["toml", "env"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }


# for seding the transaction via-prober
