[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
time        = { workspace = true }
thiserror   = { workspace = true }
dotenvy     = { workspace = true }
envy        = { workspace = true }
axum        = { workspace = true }
sqlx        = { workspace = true }
redis       = { workspace = true }