[package]
name = "rpc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
