[package]
name = "kafka"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.36", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tokio.workspace = true
