[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
rpc-core = { path = "../../crates/core" }
actix-web = "4"
dotenvy = "0.15"
tokio.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rpc-cache = { path = "../../crates/redis" }

deadpool-redis = { workspace = true }   
actix-ws = "0.4.0"
actix-cors = "0.7"
futures-util = "0.3.32"
