[package]
name = "geyser-consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tonic = { version = "0.11", features = ["tls", "tls-webpki-roots"] }
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"
serde_json.workspace = true
anyhow.workspace = true
dotenvy = "0.15"
tracing.workspace = true
tracing-subscriber.workspace = true
base64 = "0.21"
bs58 = "0.5"
chrono = "0.4"
dashmap = "5"

[build-dependencies]
tonic-build = "0.11"
