[package]
name = "geyser-consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
yellowstone-grpc-client = "13.1.0"
yellowstone-grpc-proto = "12.3.0"
tonic = { version = "0.14", features = ["tls-native-roots", "tls-ring"] }
tokio.workspace = true
tokio-stream = "0.1"
serde_json.workspace = true
anyhow.workspace = true
dotenvy = "0.15"
tracing.workspace = true
tracing-subscriber.workspace = true
base64 = "0.21"
bs58 = "0.5"
chrono = { workspace = true }
kafka = { path = "../../crates/kafka" }
rpc-core = { path = "../../crates/core" }
