[package]
name = "ingestion-service"
version = "0.1.0"
edition = "2024"

[dependencies]
rpc-core = { path = "../../crates/core" }
kafka = { path = "../../crates/kafka" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
rdkafka = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
