[package]
name = "scheduler-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bs58 = "0.5.1"
dotenvy = "0.15"
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3.1.2"
solana-client = "3.1.12"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
solana-commitment-config = "3.1.1"
solana-system-interface = "3.2.0"
tokio.workspace = true
uuid.workspace = true
kafka = { path = "../../crates/kafka" }
rpc-core = { path = "../../crates/core" }
