[package]
name = "stat-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rpc-core = { workspace = true }
rpc-cache = { path = "../../crates/redis" }
kafka = { path = "../../crates/kafka" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
rdkafka = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }

dashmap = "6.1.0"
